--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ transition: all 500ms ease;
 
 .raleway {font-family: 'Raleway', sans-serif;}
 #intro {
-  background: url(img/skyline.jpg) no-repeat center center fixed; 
+  background: url(NOBE-UMN/img/skyline.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
