--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
-    <link rel="shortcut icon" href="NOBE-UMN/img/favicon.png" type='image/x-icon'>
+    <link rel="shortcut icon" href="img/favicon.png" type='image/x-icon'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -59,7 +59,7 @@ transition: all 500ms ease;
 
 .raleway {font-family: 'Raleway', sans-serif;}
 #intro {
-  background: url(NOBE-UMN/img/skyline.jpg) no-repeat center center fixed; 
+  background: url(img/skyline.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
