--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@ transition: all 500ms ease;}
 
 
 @media screen and (max-width: 568px) {
-        #title, #eventName {font-size:20px;}
+        #title {font-size:20px;}
         #umn {width: 20%; height: 20%;}
         #aboutText {font-size: 15px;}
     }
 
 @media screen and (min-width: 569px) {
-        #title, #eventName {font-size:50px;}
+        #title {font-size:50px;}
         #umn {width: 20%; height: 20%;}
         #aboutText {font-size:20px;}
     }
@@ -284,8 +284,8 @@ transition: all 500ms ease;}
 </div>
 
 <div class="col-md-9">
-<h1 id="eventName" style="color: white;" class="josefin">McKinsey & Company | <span style="color: #7ff122;">Sept. 8, 2017</span></h1>
-<h1 id="eventName" style="color: white;" class="josefin"><i>Location TBA</i></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin">McKinsey & Company | <span style="color: #7ff122;">Sept. 8, 2017</span></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin"><i>Location TBA</i></h1>
 <p id="aboutText" class="openSans" style="color: white; padding-left: 10%; padding-right: 10%; padding-bottom: 25px; padding-top: 10px;">NOBE has partnered with the Undergraduate Consulting Club to bring you McKinsey & Company, a top worldwide management consulting firm! Come to learn, network, and have a good time!</p>
             </div>
             </div>
@@ -298,8 +298,8 @@ transition: all 500ms ease;}
             </div>
 
             <div class="col-md-9">
-<h1 id="eventName" style="color: white;" class="josefin">NOBE Kickoff | <span style="color: #7ff122;">Sept. 14, 2017</span></h1>
-<h1 id="eventName" style="color: white;" class="josefin"><i>Bruininks Hall 220, 6 - 7PM</i></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin">NOBE Kickoff | <span style="color: #7ff122;">Sept. 14, 2017</span></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin"><i>Bruininks Hall 220, 6 - 7PM</i></h1>
 <p id="aboutText" class="openSans" style="color: white; padding-left: 10%; padding-right: 10%; padding-bottom: 25px; padding-top: 10px;">Learn about what NOBE does, what our upcoming events are, and how to get involved!</p>
             </div>
             </div>
@@ -312,8 +312,8 @@ transition: all 500ms ease;}
             </div>
 
             <div class="col-md-9">
-<h1 id="eventName" style="color: white;" class="josefin">Emerson | <span style="color: #7ff122;">Sept. 21, 2017</span></h1>
-<h1 id="eventName" style="color: white;" class="josefin"><i>Location TBA</i></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin">Emerson | <span style="color: #7ff122;">Sept. 21, 2017</span></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin"><i>Location TBA</i></h1>
 <p id="aboutText" class="openSans" style="color: white; padding-left: 10%; padding-right: 10%; padding-bottom: 25px; padding-top: 10px;">Learn about the Fortune 500 company, Emerson. Emerson manufactures and provides engineering services for a wide range of industrial, commercial, and consumer markets. They currently have approximately 111,000 employees and 205 manufacturing locations worldwide!</p>
             </div>
             </div>
