--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <style type="text/css">
-
+body {           
+height:100%;
+overflow: scroll;
+}
 #team {
      width: 100%;
     height: 100%;
@@ -120,6 +123,8 @@ transition: all 500ms ease;}
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+    height: 100%; 
+overflow: hidden;
 }
 
 #events {
