--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ transition: all 500ms ease;}
             <div class="row">
                 <div class="col-lg-12">
                     
-                    <h1 style="color: white;" id="title" class="josefin wow fadeInUp"><strong>National Organization for Business and Engineering</strong></h1>
+                    <h1 style="color: white;" id="title" class="josefin wow fadeInUp">National Organization for Business and Engineering</h1>
                     <img id="umn" class="josefin wow fadeInUp" src="img/umnlogo4.png">
                     
                    <div style="padding-top: 10%; padding-bottom: 20%;">
-                    <a href="https://gopherlink.umn.edu/organization/2542" class="button button1 wow fadeInUp openSans" target="_blank"><strong>GopherLink</strong></a>
+                    <a href="https://gopherlink.umn.edu/organization/2542" class="button button1 wow fadeInUp openSans" target="_blank">GopherLink</a>
                     </div>
                 </div>
             </div>
@@ -270,7 +270,7 @@ transition: all 500ms ease;}
 
 <div class="col-md-9">
 <h1 style="color: white; font-size: 25px;" class="josefin">McKinsey & Company | <span style="color: #7ff122;">Sept. 8, 2017</span></h1>
-<h1 style="color: white; font-size: 25px;" class="josefin"><i>Location TBA</i></h1>
+<h1 style="color: white; font-size: 25px;" class="josefin"><i>Hanson 1-102, 12PM</i></h1>
 <p id="aboutText" class="openSans" style="color: white; padding-left: 10%; padding-right: 10%; padding-bottom: 25px; padding-top: 10px;">NOBE has partnered with the Undergraduate Consulting Club to bring you McKinsey & Company, a top worldwide management consulting firm! Come to learn, network, and have a good time!</p>
             </div>
             </div>
@@ -496,7 +496,8 @@ transition: all 500ms ease;}
     border-top: solid #a9cc56;" id="footer" class="footer-section">
 <div class="container">
 <img style="height: 30px; width: 30px; float:left;" src="img/favicon.png">
-<p class="openSans" style="color: grey; float: right;" >Copyright © 2017 NOBE UMN</p>
+<p class="openSans" style="color: grey; text-align: right;" >Copyright © 2017 NOBE UMN</p>
+<p class="openSans" style="color: grey; text-align: right;" >Created by Sujeet Kohli</p>
 </div>    
 </section>
 
